Fix modal overflow

--- a/src/components/Display/Modal/Modal.scss
+++ b/src/components/Display/Modal/Modal.scss
@@ -31,6 +31,7 @@
         z-index: 998;
         height: 100vh;
         width: 100vw;
+        max-width: 100%;
         background-color: black;
         opacity: 0.35;
     }
